--- a/MyDrinkingBuddy.ClientVue/src/assets/base.css
+++ b/MyDrinkingBuddy.ClientVue/src/assets/base.css
@@ -72,3 +72,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.disabled {
+	opacity: 0.7;
+	pointer-events: none;
+}
